<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/calendar_schedule_detail_nav_ll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:parentTag="android.widget.LinearLayout">

    <com.zj.dtv.DrawableTextView
        android:id="@+id/calendar_schedule_detail_nav_invite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        app:dtv_drawableHeight="20dp"
        app:dtv_drawablePadding="1dp"
        app:dtv_drawableWidth="20dp"
        app:dtv_orientation="top"
        app:dtv_replaceDrawable="@mipmap/calendar_icon_schedule_detail_nav_invite"
        app:dtv_text="@string/Invite"
        app:dtv_textColor="#ccffffff"
        app:dtv_textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/calendar_schedule_detail_dtv_owner" />

    <com.zj.dtv.DrawableTextView
        android:id="@+id/calendar_schedule_detail_nav_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        app:dtv_drawableHeight="20dp"
        app:dtv_drawablePadding="1dp"
        app:dtv_drawableWidth="20dp"
        app:dtv_orientation="top"
        app:dtv_replaceDrawable="@mipmap/calendar_icon_schedule_detail_nav_start"
        app:dtv_text="@string/Start"
        app:dtv_textColor="#ccffffff"
        app:dtv_textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/calendar_schedule_detail_dtv_owner" />

    <com.zj.dtv.DrawableTextView
        android:id="@+id/calendar_schedule_detail_nav_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        app:dtv_drawableHeight="20dp"
        app:dtv_drawablePadding="1dp"
        app:dtv_drawableWidth="20dp"
        app:dtv_orientation="top"
        app:dtv_replaceDrawable="@mipmap/calendar_icon_schedule_detail_nav_edit"
        app:dtv_text="@string/Edit"
        app:dtv_textColor="#ccffffff"
        app:dtv_textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/calendar_schedule_detail_dtv_owner" />

    <com.zj.dtv.DrawableTextView
        android:id="@+id/calendar_schedule_detail_nav_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        app:dtv_drawableHeight="20dp"
        app:dtv_drawablePadding="1dp"
        app:dtv_drawableWidth="20dp"
        app:dtv_orientation="top"
        app:dtv_replaceDrawable="@mipmap/calendar_icon_schedule_detail_nav_cancel"
        app:dtv_text="@string/Cancel"
        app:dtv_textColor="#ccffffff"
        app:dtv_textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/calendar_schedule_detail_dtv_owner" />

    <com.zj.dtv.DrawableTextView
        android:id="@+id/calendar_schedule_detail_nav_join"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        app:dtv_drawableHeight="20dp"
        app:dtv_drawablePadding="1dp"
        app:dtv_drawableWidth="20dp"
        app:dtv_orientation="top"
        app:dtv_replaceDrawable="@mipmap/calendar_icon_schedule_detail_nav_join"
        app:dtv_text="@string/Join"
        app:dtv_textColor="#ccffffff"
        app:dtv_textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/calendar_schedule_detail_dtv_owner" />

</merge>